--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
 body {
-  background-image: url("TruckAdventure.png");
-  background-position: center center; /* 画像を常に天地左右の中央に配置 */
-  background-repeat: no-repeat; /* 画像をタイル状に繰り返し表示しない */
-  background-attachment: fixed; /* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
-  background-size: cover; /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
-  background-color: #464646; /* 背景画像が読み込まれる前に表示される背景のカラー */
+  /*background-image: url("TruckAdventure.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;*/
+  background-color: #632C18;
+}
+
+.buruburu {
+  display: inline-block;
+  animation: hurueru .6s  infinite;
+}
+
+@keyframes hurueru {
+  0% {transform: translate(0px, 0px) rotateZ(0deg)}
+  25% {transform: translate(2px, 2px) rotateZ(1deg)}
+  50% {transform: translate(0px, 2px) rotateZ(0deg)}
+  75% {transform: translate(2px, 0px) rotateZ(-1deg)}
+  100% {transform: translate(0px, 0px) rotateZ(0deg)}
+}
+
+.bg-img {
+  width: 100%;
+  height: 100%;
 }
